refactor: update syntax at oracle document manager using var
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>